Agregando algo nuevo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>hola mundo</h1>
     <h1> actualizacion</h1>
-    <h2>2da actualiacion</h2>
+    <h2>commit actualiacion</h2>
+    <h3>commit alternativo</h3>
+
 </body>
 </html>
